<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_bt_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_that"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/that"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_other_user_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/user_block"
                android:textColor="@color/errorColor"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0.5dp"
                android:text="@string/is"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/completed"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:strokeColor="@color/color_main">

            <Button
                android:id="@+id/btn_unblock_other_user_confirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_main_bottom_left_right_corner_background"
                android:text="@string/confirmed"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
