<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_bt_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tv_other_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/that_user"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_unblock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="0.5dp"
                android:text="@string/unblock"
                android:textColor="@color/errorColor"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_would_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/would_you"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:strokeColor="@color/color_main">

            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/color_main"
                android:textStyle="bold"
                app:imageView_duration="150" />

            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/btn_unblock_other_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_main_bottom_right_corner_background"
                android:text="@string/unblock"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:imageView_duration="50" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>